[bdist_wheel]
universal = 1

[metadata]
name = sensebook
version = 0.0.1
license = BSD 3-Clause
license_file = LICENSE.txt

author = Mads Marquart
author_email = madsmtm@gmail.com

description = Making sense of Facebooks undocumented API
long_description = file: README.md
long_description_content_type = text/markdown

keywords = Facebook FB Messenger Library Documentation Sans-IO
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: JavaScript
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications :: Chat
    Topic :: Documentation
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

url = https://github.com/madsmtm/sensebook/
project_urls =
    Repository = https://github.com/madsmtm/sensebook/

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = sensebook
python_requires = >=3.5, <4.0
install_requires =

[options.extras_require]
dev =
    tox
    black
